--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "http://tedi0722.github.io/portfoliov2/",
   "dependencies": {
     "gh-pages": "^2.0.1",
+    "rc-queue-anim": "^1.6.11",
     "react": "^16.7.0",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.7.0",
